Changed options to fix bug