@@ -49,9 +49,3 @@ configure<SourceSetContainer>
         java.srcDir("src")
     }
 }
-
-tasks.withType<JavaExec>{
-    jvmArgs = listOf("--add-opens", "javafx.graphics/javafx.scene=ALL-UNNAMED")
-}
-
-
